--- a/client/index.html
+++ b/client/index.html
@@ -11,6 +11,9 @@
 
   <body>
     <div id="app">
+      <p class="self-tag">Made with <span>💝</span> by Brij Shyam <span>😊</span> <br>
+      <p class="ai-credit">using OpenAi</p>
+      </p>
       <div id="chat_container"></div>
 
       <form>
