--- a/client/index.html
+++ b/client/index.html
@@ -5,22 +5,21 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Codex - Your Coding Assistance</title>
+    <title>Sassy -Your Coding Assistance</title>
     <link rel="stylesheet" href="style.css" />
   </head>
 
   <body>
     <div id="app">
       <p class="self-tag">Made with <span>💝</span> by Brij Shyam <span>😊</span> <br>
-      <p class="ai-credit">using OpenAi</p>
+      <p class="ai-credit">using OpenAI</p>
       </p>
       <div id="chat_container"></div>
 
       <form>
-        <textarea name="prompt" rows="1" cols="1" placeholder="Ask me anything... "></textarea>
+        <textarea name="prompt" rows="1" cols="1" placeholder="Ask Sassy -your coding AI assistant"></textarea>
         <button type="submit"><img src="assets/send.png" alt="send" />
       </form>
-      <!-- <p>Hi, Made with Love by Brij Shyam</p> -->
     </div>
 
     <script type="module" src="script.js"></script>
