--- a/client/index.html
+++ b/client/index.html
@@ -11,8 +11,19 @@
 
   <body>
     <div id="app">
-      <p class="self-tag">Made with <span>💝</span> by Brij Shyam <span>😊</span> <br>
+      <p class="self-tag">Made with <span>💝</span> by Brij <span>😊</span> <br>
       <p class="ai-credit">using OpenAI</p>
+
+      <div class="info-banner-wrapper">
+        <div class="item1">
+          <h4>
+            Ask me anything...
+          </h4>
+        </div>
+        <div class="item2">
+          <p>Like "Tell me about Rigveda" or "Write an essay on Sustainable Development" etc...</p>
+        </div>
+      </div>
       </p>
       <div id="chat_container"></div>
 
