--- a/client/index.html
+++ b/client/index.html
@@ -40,7 +40,7 @@
         styleSheet.insertRule('.btn-switcher::after { content: ""; }', styleSheet.cssRules.length); */
         for (let i = 0; i < rules.length; i++) {
           if (rules[i].selectorText === '.btn-switcher::after') {
-            rules[i].style.content = " url('./assets/sun.svg')";
+            rules[i].style.content = " url('/assets/sun.svg')";
             rules[i].style.left = '1rem'
             rules[i - 1].style.border = '#00ABB3 4px solid'
             break;
@@ -57,7 +57,7 @@
         mainDiv.classList.add('night-theme');
         for (let i = 0; i < rules.length; i++) {
           if (rules[i].selectorText === '.btn-switcher::after') {
-            rules[i].style.content = " url('./assets/moon.svg')";
+            rules[i].style.content = " url('/assets/moon.svg')";
             rules[i].style.left = '4rem'
             rules[i - 1].style.border = '#e6e6e6 4px solid'
             break;
