--- a/client/index.html
+++ b/client/index.html
@@ -49,7 +49,8 @@
         document.querySelector('.self-tag').style.color = '#F2921D'
         document.querySelector('.ai-credit').style.color = '#ddd'
         document.querySelector('form').style.backgroundColor = '#B2B2B2'
-        document.querySelector('.ai').style.opacity = '0.2'
+        document.querySelector('.ai').style.color = '#40414f6b'
+        document.querySelector('.message').style.color = '#000'
       } else {
         flag = false;
         mainDiv.classList.remove('day-theme');
