--- a/client/index.html
+++ b/client/index.html
@@ -49,7 +49,7 @@
         document.querySelector('.self-tag').style.color = '#F2921D'
         document.querySelector('.ai-credit').style.color = '#ddd'
         document.querySelector('form').style.backgroundColor = '#B2B2B2'
-        document.querySelector('.ai').style.color = '#40414f6b'
+        document.querySelector('.ai').style.backgroundColor = '#40414f6b'
         document.querySelector('.message').style.color = '#000'
       } else {
         flag = false;
@@ -66,6 +66,7 @@
         document.querySelector('.self-tag').style.color = '#ddd'
         document.querySelector('.ai-credit').style.color = '#4e4646'
         document.querySelector('form').style.backgroundColor = '#40414F';
+        document.querySelector('.message').style.color = '#dcdcdc'
       }
     });
 
