--- a/client/index.html
+++ b/client/index.html
@@ -50,7 +50,7 @@
         document.querySelector('.ai-credit').style.color = '#ddd'
         document.querySelector('form').style.backgroundColor = '#B2B2B2'
         document.querySelector('.ai').style.backgroundColor = '#40414f6b'
-        document.querySelector('.message').style.color = '#000'
+        document.querySelector('.message').style.color = 'black'
       } else {
         flag = false;
         mainDiv.classList.remove('day-theme');
