--- a/client/index.html
+++ b/client/index.html
@@ -50,7 +50,7 @@
         document.querySelector('.ai-credit').style.color = '#ddd'
         document.querySelector('form').style.backgroundColor = '#B2B2B2'
         document.querySelector('.ai').style.backgroundColor = '#40414f6b'
-        document.querySelector('.message').style.color = 'black'
+        document.querySelector('.ai').style.color = 'black'
       } else {
         flag = false;
         mainDiv.classList.remove('day-theme');
@@ -65,8 +65,8 @@
         }
         document.querySelector('.self-tag').style.color = '#ddd'
         document.querySelector('.ai-credit').style.color = '#4e4646'
-        document.querySelector('form').style.backgroundColor = '#40414F';
-        document.querySelector('.message').style.color = '#dcdcdc'
+        document.querySelector('.ai').style.backgroundColor = '#40414F';
+        document.querySelector('.ai').style.color = '#dcdcdc'
       }
     });
 
